Use API+ Make layout for Searching

--- a/19125063_19125119/app/src/main/res/layout/activity_main.xml
+++ b/19125063_19125119/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                         android:id="@+id/tvCity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Washington DC"
+                        android:text="Searching"
                         android:textColor="@color/white"
                         android:textSize="35sp"
                         android:textStyle="bold|italic"
@@ -56,7 +56,7 @@
                         android:id="@+id/tvDegree"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="30°C"
+                        android:text="0°C"
                         android:textColor="@color/white"
                         android:textSize="30sp"
                         android:textStyle="bold"
@@ -69,7 +69,7 @@
                         android:id="@+id/tvWeatherType"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Rainy"
+                        android:text="Please wait"
                         android:textColor="@color/white"
                         android:textSize="30sp"
                         android:textStyle="italic"
@@ -90,10 +90,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:src="@drawable/cool"/>
+                android:id="@+id/weatherIcon"
+                android:src="@drawable/finding"/>
         </LinearLayout>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/cityFinder"
+        android:background="@drawable/buttondesign"
+        android:layout_marginBottom="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Search New City"
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
